---
source: src/codemod.rs
description: "import type { LoaderFunctionArgs } from \"@remix-run/node\";\n\nexport function unrelated({ params, context, request, response }: LoaderFunctionArgs) {\n  return { hello: \"world\" };\n}\n"
expression: "codemod(&input, source_type).unwrap()"
---

